test/force-app/main/default/objects/Incentive_Application__c/Incentive_Application__c.object-meta.xml
<CustomObject>
    <label>Incentive Application</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Application Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>