test/force-app/main/default/objects/Incentive_Application__c/fields/Amount_of_Extensions_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Extensions_Available__c</fullName>
    <description>Input at the same time as Incentive Approval Date</description>
    <label>Amount of Extensions Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>