test/force-app/main/default/objects/Incentive_Application__c/fields/Amount_of_Extensions_Used__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Extensions_Used__c</fullName>
    <description>Input after Incentive Approval Date</description>
    <label>Amount of Extensions Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>