test/force-app/main/default/objects/Incentive_Application__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>Input after Incentive Submitted Date</description>
    <label>Application ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>