test/force-app/main/default/objects/Incentive_Application__c/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <label>Application Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>