test/force-app/main/default/objects/Incentive_Application__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Input after Incentive Submitted Date</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>