test/force-app/main/default/objects/Incentive_Application__c/fields/Award_Block__c.field-meta.xml
<CustomField>
    <fullName>Award_Block__c</fullName>
    <label>Award Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>