test/force-app/main/default/objects/Incentive_Application__c/fields/Award_Link__c.field-meta.xml
<CustomField>
    <fullName>Award_Link__c</fullName>
    <label>Award Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>