test/force-app/main/default/objects/Incentive_Application__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <description>Input at the same time as Incentive Approval Date</description>
    <label>Payment Schedule</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>