test/force-app/main/default/objects/Incentive_Application__c/fields/Program_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact_Information__c</fullName>
    <description>Input after Incentive Submitted Date</description>
    <label>Program Contact Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>