test/force-app/main/default/objects/Incentive_Application__c/fields/REC_registration_filing__c.field-meta.xml
<CustomField>
    <fullName>REC_registration_filing__c</fullName>
    <description>Used to be Additional Regulatory Filing on the Opportunity</description>
    <label>REC Registration Filing</label>
    <type>TextArea</type>
</CustomField>