test/force-app/main/default/objects/Incentive_Application__c/fields/Reservation_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Expiration_Date__c</fullName>
    <label>Reservation Expiration Date</label>
    <type>Date</type>
</CustomField>