test/force-app/main/default/objects/Incentive_Application__c/fields/Reservation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Fee__c</fullName>
    <description>Input at the same time as Incentive Submitted date</description>
    <label>Reservation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>