test/force-app/main/default/objects/Incentive_Application__c/fields/Reservation_Fee_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Fee_Refundable__c</fullName>
    <description>Input at the same time as Incentive Submitted date</description>
    <label>Reservation Fee Refundable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FFFFFF</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFFFF</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>