test/force-app/main/default/objects/Incentive_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Deficiency</fullName>
            </value>
            <value>
                <fullName>Award Reserved</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>