test/force-app/main/default/objects/Incentive_Application__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Deliverables</fullName>
            </value>
            <value>
                <fullName>Pending Utility</fullName>
            </value>
            <value>
                <fullName>Pending Program Review</fullName>
            </value>
            <value>
                <fullName>Pending Engineering</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Pending DSD</fullName>
            </value>
            <value>
                <fullName>Pending PTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>