test/force-app/main/default/objects/Incentive_Application__c/fields/Submitted_Storage_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Storage_Size_kW__c</fullName>
    <description>Input at the same time as Incentive Submitted date</description>
    <label>Submitted Storage Size (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>