test/force-app/main/default/objects/Incentive_Application__c/fields/Submitted_Storage_Size_kWh__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Storage_Size_kWh__c</fullName>
    <description>Input at the same time as Incentive Approval Date</description>
    <label>Submitted Storage Size (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>