test/force-app/main/default/objects/Incentive_Application__c/fields/Term_of_Extension_Calendar_days__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Extension_Calendar_days__c</fullName>
    <description>Input at the same time as Incentive Approval Date</description>
    <label>Term of Extension (Calendar days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>