test/force-app/main/default/objects/Incentive_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Award_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>